--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 @section Scripts{
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
@@ -67,21 +67,25 @@
         // The function takes Form and the event object as parameter
         function SubmitForm(frm, caller) {
             caller.preventDefault();
-            console.log("Ajax 1");
             var form = document.getElementById('CreateUserForm');
-            var fdata = new FormData(form);
-            console.log("Ajax 2");
+            //var fdata = new FormData(form);
+            var fdata = $('#CreateUserForm').serialize();
+            //var fdata = form.serialize();
+            console.log(fdata);
+            console.log(form.method);
+            console.log(form.action);
             $.ajax({
-                type: frm.method,
-                url: frm.action,
+                type: form.method,
+                url: form.action,
+                dataType: 'json',
                 data: fdata,
                 processData: false,
-                contentType: false,
+                //contentType: false,
                 success: function (data) {
                     alert(data);
                 },
                 error: function (data) {
-                    alert(data);
+                    alert('failure');
                 }
             });
         }
