--- a/Views/Admin/_UploadFilesPartial.cshtml
+++ b/Views/Admin/_UploadFilesPartial.cshtml
@@ -1,9 +1,20 @@
 ﻿<div>
+    <p>
+        Please Upload Files in this Order:
+        1. Student Excel File
+        2. Student QR Code File
+        3. Student Photo Id Files
+    </p>
+    <p>
+        Note: Id Photo Files must be named the Students ID.
+    </p>
+</div>
+<div>
     <form method="post" enctype="multipart/form-data" id="UploadFocusForm" action="">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload Students:</p>
-                <input type="file" name="focusFiles" multiple id="focusStudentInput"/>
+                <input type="file" name="focusFiles" single id="focusStudentInput"/>
             </div>
         </div>
         <div class="form-group">
@@ -18,7 +29,7 @@
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload ClassLink QR File:</p>
-                <input type="file" name="classLinkFiles" multiple id="classLinkInput"/>
+                <input type="file" name="classLinkFiles" single id="classLinkInput"/>
             </div>
         </div>
         <div class="form-group">
