--- a/wwwroot/css/IdTemplateStyleSheet.css
+++ b/wwwroot/css/IdTemplateStyleSheet.css
@@ -10,14 +10,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: white;
     flex-direction: row;
     flex-flow: wrap;
 
 }
 
 .front {
-    height: 380px;
+    height: 396px;
     width: 250px;
     border-radius: 10px;
     position: relative;
@@ -25,19 +25,19 @@
 }
 
 .back {
-    height: 380px;
+    height: 396px;
     width: 250px;
     border-radius: 10px;
     position: relative;
     background-color: white;
 }
 
-.top{
+.top {
     height: 25%;
     width: 250px;
     background-color: #c20606;
     position: relative;
-    z-index: 5;
+    /*z-index: 5;*/
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
@@ -71,9 +71,9 @@
 }
 
 .bottom .barcode{
-    width: 100%;
-    padding-left: 20px;
-    padding-top: 10px;
+    position: absolute;
+    left: 25px;
+    
 }
 .top img{
     height: 60px;
@@ -104,10 +104,10 @@
 
 .middle img{
     object-fit: scale-down;
-    height: 100%;
-    width: 70%;
+    height: 85%;
+    width: 60%;
     top: 10px;
-    left: 40px;
+    left: 50px;
     position: absolute;
 }
 
@@ -158,7 +158,7 @@
 .Details {
     color: black;
     text-align: center;
-    padding: 5px;
+    /*padding: 5px;*/
     font-size: 25px;
 }
 
@@ -182,24 +182,24 @@
     .container{
         height: 130vh;
     }
-    .container .front{
-        margin-top: 50px;
-    }
+        .container .front {
+            /*margin-top: 50px;*/
+        }
 }
 @media screen and (max-width:600px)
 {
     .container{
         height: 130vh;
     }
-    .container .front{
-        margin-top: 50px;
-    }
+        .container .front {
+            /*margin-top: 50px;*/
+        }
 
 }
 
-@media print{
+/*@media print{
     .container {
-        height: 380px;
+        height: 391px;
         width: 250px;
     }
-}
+} */
