--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,41 +7,15 @@
 }
 
 <div class="row">
-    <div class="col-lg-3 col-md-2"></div>
-    <div class="col-lg-6 col-md-8 login-box">
-        <div class="col-lg-12 login-key">
-            <i class="fa fa-key" aria-hidden="true"></i>
-        </div>
-        <div class="col-lg-12 login-title">
-            IdGen Login
-        </div>
-
-        <div class="col-lg-12 login-form">
-            <div class="col-lg-12 login-form">
-                <form id="account" method="post">
-                    <div class="form-group">
-                        <label class="form-control-label" asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-control-label" asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" class="form-control" />
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-
-                    <div class="col-lg-12 loginbttm">
-                        <div class="col-lg-6 login-btm login-text">
-                            <!-- Error Message -->
-                        </div>
-                        <div class="col-lg-6 login-btm login-button">
-                            <button type="submit" class="btn btn-outline-primary">LOGIN</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-2"></div>
+    <div class="form-group">
+        <form id="account" method="post">
+            <input asp-for="Input.Email" class="input-field" type="text" placeholder="username" name="username" />
+            <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <input asp-for="Input.Password" class="input-field" type="password" placeholder="password" name="password" />
+            <span asp-validation-for="Input.Password" class="text-danger"></span>
+            <input type="submit" style="" value="login" />
+        </form>
+        
     </div>
         <!--<div class="col-md-4">
          <section>
