--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -1,127 +1,69 @@
 ﻿body {
-    background: #222D32;
-    font-family: 'Roboto', sans-serif;
-}
-
-.login-box {
-    margin-top: 75px;
-    height: auto;
-    background: #1A2226;
-    text-align: center;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-
-.login-key {
-    height: 100px;
-    font-size: 80px;
-    line-height: 100px;
-    background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.login-title {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 30px;
-    letter-spacing: 2px;
-    margin-top: 15px;
-    font-weight: bold;
-    color: #ECF0F5;
-}
-
-.login-form {
-    margin-top: 25px;
-    text-align: left;
-}
-
-input[type=text] {
-    background-color: #1A2226;
-    border: none;
-    border-bottom: 2px solid #0DB8DE;
-    border-top: 0px;
-    border-radius: 0px;
-    font-weight: bold;
-    outline: 0;
-    margin-bottom: 20px;
-    padding-left: 0px;
-    color: #ECF0F5;
-}
-
-input[type=password] {
-    background-color: #1A2226;
-    border: none;
-    border-bottom: 2px solid #0DB8DE;
-    border-top: 0px;
-    border-radius: 0px;
-    font-weight: bold;
-    outline: 0;
-    padding-left: 0px;
-    margin-bottom: 20px;
-    color: #ECF0F5;
+    font-family: "Helvetica Neue", "Open sans", sans-serif;
+    background-color: gray;
+    background: -webkit-linear-gradient(top left, #c31432, #240b36);
+    color: white;
 }
 
 .form-group {
-    margin-bottom: 40px;
-    outline: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.form-control:focus {
-    border-color: inherit;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-bottom: 2px solid #0DB8DE;
-    outline: 0;
-    background-color: #1A2226;
-    color: #ECF0F5;
-}
-
-input:focus {
+form input {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.3em;
+    padding: 10px;
+    color: #fff;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 4px;
+    font-weight: 300;
     outline: none;
-    box-shadow: 0 0 0;
+    font-weight: 100;
+    letter-spacing: 4px;
+    margin-left: 10px;
+    max-width: 350px;
 }
 
-label {
-    margin-bottom: 0px;
+input .input-field {
+    border: 1px solid black;
 }
 
-.form-control-label {
-    font-size: 10px;
-    color: #6C6C6C;
-    font-weight: bold;
-    letter-spacing: 1px;
+form input:hover, form input:focus {
+    border-bottom: 2px solid rgba(255, 255, 255, .9);
+    /border-radius: 5%;
 }
 
-.btn-outline-primary {
-    border-color: #0DB8DE;
-    color: #0DB8DE;
-    border-radius: 0px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+form input::placeholder {
+    color: #d3d1d3;
+    font-weight: 100;
+    letter-spacing: 4px;
+    margin-left: 10px;
 }
 
-    .btn-outline-primary:hover {
-        background-color: #0DB8DE;
-        right: 0px;
+input[type="submit"] {
+    margin: 40px auto;
+    border: 1px solid white;
+    display: bl;
+    width: 100px;
+}
+
+    input[type="submit"]:hover {
+        border: 1px solid white;
+        display: bl;
+        width: 100px;
     }
 
-.login-btm {
-    float: left;
-}
-
-.login-button {
-    padding-right: 0px;
+.form-group p {
+    margin-top: 10px;
     text-align: right;
-    margin-bottom: 25px;
 }
 
-.login-text {
-    text-align: left;
-    padding-left: 0px;
-    color: #A2A4A4;
-}
-
-.loginbttm {
-    padding: 0px;
-}
+    .form-group p a {
+        color: rgb(225, 225, 225);
+    }
