--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,9 +9,9 @@
 <div class="row">
     <div class="form-group">
         <form id="account" method="post">
-            <input asp-for="Input.Email" class="input-field" type="text" placeholder="username" name="username" />
+            <input asp-for="Input.Email" class="input-field" placeholder="username" />
             <span asp-validation-for="Input.Email" class="text-danger"></span>
-            <input asp-for="Input.Password" class="input-field" type="password" placeholder="password" name="password" />
+            <input asp-for="Input.Password" class="input-field"placeholder="password" />
             <span asp-validation-for="Input.Password" class="text-danger"></span>
             <input type="submit" style="" value="login" />
         </form>
