--- a/Views/Shared/_ViewStudentsPartial.cshtml
+++ b/Views/Shared/_ViewStudentsPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<StudentModel>
 <div class="row">
-    <input type="text" class="form-control" placeholder="Search for Student" id="studentTextField" />
+    <div class="col-3">
+        <input type="text" class="form-control" placeholder="Search for Student" id="studentTextField" />
+    </div>
     <button class="btn btn-primary" onclick="SearchStudent()">Search</button>
 </div>
 @if (Model.Count() > 0)
@@ -26,6 +28,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.GradeLevel)
                     <i class="bi bi-sort-up"></i>
+                </th>
+                <th>
+                    Action
                 </th>
             </tr>
         </thead>
